1.0
 * first release

1.1
 * don't match items with no buyout price
 * treat 25% and 50% herbs differently
 * include verdant pigment & hunter's ink
 * fix 7 of blessings item id (was matching a random gem)

1.2
 * ?